<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/snow_bg"
    tools:context=".SignIn">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_signIn"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:gravity="center"
       android:orientation="vertical"
       android:layout_marginTop="40dp">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:layout_marginStart="25dp"
           android:layout_marginEnd="25dp"
           android:text="@string/signinText"
           android:textColor="@color/secondaryTextColor"
           android:textSize="16sp"/>

       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginEnd="25dp"
           android:layout_marginStart="25dp"
           android:layout_marginTop="60dp"
           android:elevation="10dp"
           app:cardCornerRadius="10dp">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:padding="16dp">

               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="16dp"
                   android:layout_marginEnd="16dp">

                   <androidx.appcompat.widget.AppCompatEditText
                       android:id="@+id/et_email_signin"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/emailID"
                       android:inputType="textEmailAddress"
                       android:textSize="16sp"
                       />

               </com.google.android.material.textfield.TextInputLayout>

               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="16dp"
                   android:layout_marginEnd="16dp"
                   android:layout_marginTop="20dp">

                   <androidx.appcompat.widget.AppCompatEditText
                       android:id="@+id/et_password_signin"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/password"
                       android:inputType="textPassword"
                       android:textSize="16sp"
                       />

               </com.google.android.material.textfield.TextInputLayout>

               <androidx.appcompat.widget.AppCompatButton
                   android:id="@+id/btn_sign_in_signIn"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   android:layout_marginStart="20dp"
                   android:layout_marginEnd="20dp"
                   android:layout_marginTop="30dp"
                   android:background="@drawable/shape_button_rounded"
                   android:foreground="?attr/selectableItemBackground"
                   android:layout_gravity="center"
                   android:paddingTop="8dp"
                   android:paddingBottom="8dp"
                   android:text="@string/sign_in"
                   android:textColor="@color/white"
                   android:textSize="18sp"/>
           </LinearLayout>


       </androidx.cardview.widget.CardView>

   </LinearLayout>

</LinearLayout>