<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="5dp"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_add_taskList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:background="#F7F6FA"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/addList"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            tools:visibility="visible"
            android:visibility="gone"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_add_task_list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:visibility="gone"
            tools:visibility="visible"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/ib_close_list_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/img_content_desc"
                    android:padding="10dp"
                    android:src="@drawable/ic_cancel"/>
                
                <EditText
                    android:id="@+id/et_task_list_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="List Name"
                    android:hint="@string/list_name"
                    android:inputType="text"/>

                <ImageButton
                    android:id="@+id/ib_done_list_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/img_content_desc"
                    android:padding="10dp"
                    android:src="@drawable/ic_done_image"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/ll_task_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f7f6fa"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">
            
            <LinearLayout
                android:id="@+id/ll_title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f8f8f8"
                android:elevation="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tv_task_list_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textSize="16sp"
                    tools:text="Title"
                    android:textColor="@color/primaryTextColor"/>

                <ImageButton
                    android:id="@+id/ib_edit_list_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/img_content_desc"
                    android:padding="10dp"
                    android:src="@drawable/ic_edit"/>

                <ImageButton
                    android:id="@+id/ib_delete_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/img_content_desc"
                    android:padding="10dp"
                    android:src="@drawable/ic_delete_image"/>
            </LinearLayout>
            
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divider_Color"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_edit_task_list_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="5dp"
                android:visibility="gone"
                tools:visibility="visible"
                app:cardCornerRadius="5dp">
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/ib_close_editable_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/img_content_desc"
                        android:padding="10dp"
                        android:src="@drawable/ic_cancel"/>

                    <EditText
                        android:id="@+id/et_edit_task_list_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="List Name"
                        android:hint="@string/list_name"
                        android:inputType="text"/>

                    <ImageButton
                        android:id="@+id/ib_done_edit_list_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/img_content_desc"
                        android:padding="10dp"
                        android:src="@drawable/ic_done_image"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/rv_card_list"/>
            
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_add_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="5dp"
                app:cardCornerRadius="5dp"
                android:visibility="gone"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/ib_close_card_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/img_content_desc"
                        android:padding="10dp"
                        android:src="@drawable/ic_cancel"/>

                    <EditText
                        android:id="@+id/et_card_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="Card Name"
                        android:hint="@string/card_name"
                        android:inputType="text"/>

                    <ImageButton
                        android:id="@+id/ib_done_card_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/img_content_desc"
                        android:padding="10dp"
                        android:src="@drawable/ic_done_image"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            
            <TextView
                android:id="@+id/tv_add_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f7f6fa"
                android:elevation="10dp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/add_card"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                tools:visibility="visible"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>